@@ -142,6 +142,18 @@
             <li><a href="reference/html/classes.html">All Classes</a></li>
             <li><a href="reference/html/functions.html">All methods (long)</a></li>
             <li><a href="reference/html/pages.html">Deprecated and new API</a></li>
+            <li>
+<!-- Search Google -->
+<FORM method=GET action=http://www.google.com/custom>
+<INPUT TYPE=text name=q size=31 maxlength=255 value="" />
+<INPUT type=submit name=sa VALUE="Google Search in gtkmm Documentation" />
+<INPUT type=hidden name=cof VALUE="L:http://www.gtkmm.org/images/gtkmm_logo_small.png;AH:center;S:http://www.gtkmm.org;" />
+
+<INPUT type=hidden name=domains value="http://www.gtkmm.org/docs/" /><br>
+<INPUT type=hidden name=sitesearch value="http://www.gtkmm.org/docs/" />
+</FORM>
+<!-- Search Google -->
+            </li>
 
            </ul>
           </td>
