@@ -6489,10 +6489,7 @@ Glib::RefPtr&lt;Gnome::Glade::Xml&gt; refXml = Gnome::Glade::Xml::create(&quot;b
 </programlisting>
 This will instantiate the windows defined in the .glade file, though they will
 not be shown immediately unless you have specified that via the Properties
-window in <application>Glade</application>. The widgets are owned by the
-<classname>Gnome::Glade::Xml</classname> instance, and will be deleted
-automatically when it is deleted, when the last copy of the smartpointer goes
-out of scope.
+window in <application>Glade</application>.
 </para>
 
 <para>To instantiate just one window, or just one of the child widgets, you can specify the name of a widget as the second parameter. For instance,
@@ -6535,8 +6532,8 @@ widgets are instantiated during <function>Glade::Xml::create()</function>.
 
 <para>
 <function>get_widget()</function> returns child widgets that are
-<function>manage()</function>ed (see the <link linkend="sec-Memory">Memory
-    Management</link> chapter), so they will be deleted when their parent
+<function>manage()</function>ed (see the <link linkend="sec-Memory">Memory 
+Management</link> chapter), so they will be deleted when their parent
 container is deleted. So, if you get only a child widget from
 <application>libglademm</application>, instead of a whole window, then you must
 either put it in a <classname>Container</classname> or delete it.
