@@ -1,3 +1,7 @@
+2007-01-20  Murray Cumming  <murrayc@murrayc.com>
+
+	* docs/index.html: Add a Google search, restricted to the gtkmm documentation.
+
 2007-01-12  Marko Anastasov  <marko@marko.anastasov.name>
 
 	* gtk/src/printoperation.ccg: Specify a template specialization for
